# uestc-network-manager

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  base64.cpp  encode.cpp  hmac.cpp  login.cpp  requests  test.py
.github/workflows/: unit_test.yml
conf/: user.conf
js/: all.min.js  device.js  jquery.srun.portal.js  main.js
openwrt/: Makefile
test/: CMakeLists.txt  crypto_test.cpp
unit/: uestcnetwork.service.cmake
util/: config.cpp  config.h  crypto.cpp  crypto.h
